--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,8 @@
 // }
 
 {
-   "name": "Page Redder",
-   "description": "Make the current page red",
+   "name": "Facebook Roulette",
+   "description": "Mix up facebook profile names and pics. Why? ... why not?",
    "version": "2.0",
    "permissions": [
      "activeTab"
@@ -28,7 +28,7 @@
       "persistent": false
     },
     "browser_action": {
-      "default_title": "Make this page red"
+      "default_title": "Whatever"
     },
     "manifest_version": 2
 }
